# Todo-List-API

./: .env  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env  Dockerfile  README.md  dev.env  main.py  prod.env  pyproject.toml  requirements.txt
backend/app/api/: todo.py  user.py
backend/app/core/: config.py  security.py
backend/app/db/: engine.py
backend/app/models/: __init__.py  todo.py  user.py
backend/app/schemas/: todo.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 7b2c051eeb52_init_database_migrations.py
