[tool.poetry]
name = "todo list api"
version = "0.1.0"
description = ""
authors = ["ericcarry88828 <ericcarry88828@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.7"}
sqlmodel = "^0.0.22"
pydantic-settings = "^2.7.1"
pymysql = "^1.1.1"
bcrypt = "^4.2.1"
pyjwt = "^2.10.1"
aiomysql = "^0.2.0"
alembic = "^1.14.1"
cryptography = "^44.0.1"


[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
